[project]
name = "production-rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.5",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
]
